--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,10 +5,13 @@
   ansible.builtin.setup:
   when: ansible_facts|default({}) == {}
 
-# - name: "Assert"
-#   ansible.builtin.import_tasks: assert.yml
-#   run_once: true
-#   delegate_to: localhost
+- name: "Assert"
+  ansible.builtin.import_tasks: assert.yml
+  run_once: true
+  delegate_to: localhost
+
+- name: "Distro Requirements"
+  ansible.builtin.include_tasks: distro-requirements.yml
 
 - name: "Become block"
   become: true
