--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,14 @@
 ---
 # vars file for mdatp
+supported_distros:
+  - { name: "AlmaLinux", min_version: "8", supported_architectures: "['x86_64']" }
+  - { name: "Amazon", min_version: "2023", supported_architectures: "['x86_64']" }
+  - { name: "CentOS", min_version: "7", supported_architectures: "['x86_64']" }
+  - { name: "Debian", min_version: "9", supported_architectures: "['x86_64']" }
+  - { name: "Fedora", min_version: "33", supported_architectures: "['x86_64']" }
+  - { name: "openSUSE Leap", min_version: "15.4", supported_architectures: "['x86_64']" }
+  - { name: "openSUSE Tumbleweed", min_version: "", supported_architectures: "['x86_64']" }
+  - { name: "OracleLinux", min_version: "7", supported_architectures: "['x86_64']" }
+  - { name: "RedHat", min_version: "7", supported_architectures: "['x86_64']" }
+  - { name: "Rocky", min_version: "8", supported_architectures: "['x86_64']" }
+  - { name: "Ubuntu", min_version: "20.04", supported_architectures: "['x86_64']" }
