--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,13 +1,17 @@
 ---
 # defaults file for mdatp
 
-mdatp_apt_package_version_hold:
+# enable apt-mark hold
+mdatp_apt_package_version_hold: false
+# Test connectivity to Microsoft
 mdatp_connectivity_test: false
+# Test health of MDATP
 mdatp_health_test: true
 # Microsoft repository channel insiders-fast|insiders-slow|prod
 mdatp_microsoft_repo_channel: "prod"
 # MDATP Onboaring Package file location
 mdatp_onboarding_package_location: "WindowsDefenderATPOnboardingPackage.zip"
+# MDATP state present|absent
 mdatp_state: "present"
 # MDATP YUM package version lock mdatp-101.24032.0007-1
 mdatp_yum_package_version:
