--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -1,19 +1,12 @@
 ---
 # defaults file for mdatp
 
-# mdatp_apt_package_version_hold:
-# mdatp_connectivity_test: false
-# mdatp_health_test: true
-# # Microsoft repository channel insiders-fast|insiders-slow|prod
-# mdatp_health_test: "prod"
-# # MDATP Onboaring Package file location
-# mdatp_onboarding_package_location: "WindowsDefenderATPOnboardingPackage.zip"
-# mdatp_state: "present"
-# # MDATP YUM package version lock mdatp-101.24032.0007-1
-# mdatp_yum_package_version:
-# # Prevent the microsoft repository from being installed
-# mdatp_microsoft_repo_install_disable: false
-
+- name: "Test if mdatp_apt_package_version_hold is set correctly"
+  ansible.builtin.assert:
+    that:
+      - mdatp_apt_package_version_hold is defined
+      - mdatp_apt_package_version_hold is boolean
+    quiet: true
 - name: "Test if mdatp_connectivity_test is set correctly"
   ansible.builtin.assert:
     that:
