--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,6 +5,10 @@
   ansible.builtin.setup:
   when: ansible_facts|default({}) == {}
 
+- name: "Gather package facts"
+  ansible.builtin.package_facts:
+    manager: auto
+
 - name: "Assert"
   ansible.builtin.import_tasks: assert.yml
   run_once: true
