--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,11 +9,11 @@ mdatp_connectivity_test: false
 mdatp_health_test: true
 # Microsoft repository channel insiders-fast|insiders-slow|prod
 mdatp_microsoft_repo_channel: "prod"
-# MDATP Onboaring Package file location
+# Prevent the microsoft repository from being installed
+mdatp_microsoft_repo_install_disable: false
+# MDATP Onboarding Package file location
 mdatp_onboarding_package_location: "WindowsDefenderATPOnboardingPackage.zip"
 # MDATP state present|absent
 mdatp_state: "present"
 # MDATP YUM package version lock mdatp-101.24032.0007-1
 mdatp_yum_package_version:
-# Prevent the microsoft repository from being installed
-mdatp_microsoft_repo_install_disable: false
