--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,12 +1,16 @@
 ---
 # defaults file for mdatp
 
-# enable apt-mark hold
+# Enable apt-mark hold
 mdatp_apt_package_version_hold: false
 # Test connectivity to Microsoft
 mdatp_connectivity_test: false
 # Test health of MDATP
 mdatp_health_test: true
+# Apply mdatp_managed.json template
+mdatp_managed_json_template: "false"
+# MDATP Onboarding Package file location
+mdatp_managed_json_location: "mdatp_managed.json.j2"
 # Microsoft repository channel insiders-fast|insiders-slow|prod
 mdatp_microsoft_repo_channel: "prod"
 # Prevent the microsoft repository from being installed
@@ -15,5 +19,7 @@ mdatp_microsoft_repo_install_disable: false
 mdatp_onboarding_package_location: "WindowsDefenderATPOnboardingPackage.zip"
 # MDATP state present|absent
 mdatp_state: "present"
+# MDATP Proxy URL
+mdatp_proxy_url: ""
 # MDATP YUM package version lock mdatp-101.24032.0007-1
 mdatp_yum_package_version:
