--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -1,10 +1,10 @@
----
 extends: default
 
 rules:
   line-length: disable
   comments:
     min-spaces-from-content: 1
+  comments-indentation: false
   braces:
     max-spaces-inside: 1
   octal-values:
