--- a/.github/workflows/update-copyright-years-in-license-file.yml
+++ b/.github/workflows/update-copyright-years-in-license-file.yml
@@ -4,12 +4,15 @@ on:
   schedule:
     - cron: "0 3 1 1 *" # 03:00 AM on January 1
 
+permissions:
+  contents: write
+
 jobs:
   update-license-year:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
       - name: Action Update License Year
